# strange_attractors

./: CLAUDE.md  Readme-task.md  plan.md  pyproject.toml  readme.md
src/strange_attractors/: demo.py  experiments.py
src/strange_attractors/attractors/: __init__.py  aizawa.py  attractors.py  lorenz.py  physics.py  rossler.py  thomas.py
src/strange_attractors/configs/: attractor_config.py  configs.py
src/strange_attractors/solvers/: __init__.py  newton.py  solver.py
src/strange_attractors/utils/: ringbuffer.py  starting_states.py
src/strange_attractors/visu/: matplotlib.py  vispy.py  visu.py
tests/: test_lorenz.py  test_ringbuffer.py
